# cpp1z

./: .gitignore  CMakeLists.txt  README.md  auto.cpp  init_list.cpp  lambda.cpp  non_static_data_members.cpp  rvalue.cpp  static_assert.cpp  variadic_templates.cpp
